<resources>
    <string name="app_name">Teacher\'s Job</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="portugues">Português</string>
    <string name="matematica">Matemática</string>
    <string name="ciencias">Ciências</string>
    <string name="historia">História</string>
    <string name="geografia">Geografia</string>
    <string name="artes">Artes</string>
    <string name="ingles">Inglês</string>
    <string name="filosofia">Filosofia</string>
    <string name="sociologia">Sociologia</string>
    <string name="fisica">Física</string>
    <string name="quimica">Química</string>
    <string name="biologia">Biologia</string>
    <string name="educacao_fisica">Educação Física</string>
    <string name="espanhol">Espanhol</string>
    <string name="ensino_medio">Ensino Médio</string>
    <string name="ensino_fundamental">Ensino Fundamental II</string>
    <string name="entrar">ENTRAR</string>
    <string name="email">Login</string>
    <string name="senha">Senha</string>
    <string name="discplinas_titulo">Disciplinas de Interesse</string>
    <string name="atuacao_titulo">Área de Atuação</string>
    <string name="confirmar">Confirmar</string>
    <string name="pular">Pular</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="cidade">Cidade</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="carregar_foto">Carregar Foto</string>
    <string name="cadastre_se">Cadastre-se!"</string>
    <string name="eu_concordo">EU CONCORDO"</string>
    <string name="titulo">Título"</string>
    <string name="local">Local"</string>
    <string name="data_de_encerrameto">Data de Encerramento"</string>
    <string name="descricao">Descrição"</string>
    <string name="alterar">ALTERAR"</string>
    <string name="senha_atual">Senha Atual"</string>
    <string name="nova_senha">Nova Senha"</string>
    <string name="confirmar_nova_senha">Confirmar Nova Senha"</string>
    <string name="termos">Termos e Condições de Uso"</string>
    <string name="buscar_vagas">Buscar Vagas"</string>
    <string name="buscar_concursos">Buscar Concursos"</string>
    <string name="publicar_vaga">Publicar Vaga"</string>
    <string name="publicar_concurso">Publicar Concurso"</string>
    <string name="local_vaga">Local:"</string>
    <string name="descricao_vaga">Descrição:"</string>
    <string name="publicacao_vaga_confirmada">Vaga publicada com sucesso"</string>
    <string name="publicacao_concurso_confirmada">Concurso publicado com sucesso"</string>
    <string name="menu_seu_cadastro">Seu Cadastro"</string>
    <string name="menu_area_atuacao">Sua Área de Atuação"</string>
    <string name="menu_suas_publicacoes">Suas Publicações"</string>
    <string name="menu_sair">Sair"</string>
    <string name="mensagem_sair">Deseja mesmo sair?"</string>
    <string name="login_incorreto">Usuário ou senha incorreto"</string>
    <string name="vagas">Vagas"</string>
    <string name="concursos">Concursos"</string>
    <string name="discovery">Discovery"</string>
    <string name="nada_digitado">Digite algo para ser pesquisado</string>
    <string name="configuracoes">Configurações</string>
    <string name="sobreApp">Sobre o Aplicativo</string>
    <string name="add_vaga">Adicionar Vaga</string>
    <string name="add_concurso">Adicionar Concurso</string>
    <string name="suas_vagas">Suas Vagas</string>
    <string name="seus_concursos">Seus Concursos</string>
    <string name="alterar_vaga">Alterar Sua Vaga</string>
    <string name="alterar_concurso">Alterar Seu Concurso</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
