<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cadastro"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_seu_cadastro" />

        <item
            android:id="@+id/nav_vagas"
            android:icon="@drawable/ic_school"
            android:title="@string/suas_vagas" />

        <item
            android:id="@+id/nav_concursos"
            android:icon="@drawable/ic_import"
            android:title="@string/seus_concursos" />

        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_settings"
            android:title="@string/configuracoes" />

        <item
            android:id="@+id/nav_infor"
            android:icon="@drawable/ic_info"
            android:title="@string/sobreApp" />

        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_close"
            android:title="@string/menu_sair" />
    </group>
</menu>
